Adds content to main page
- Adds a body section to the main page.

--- a/index.html
+++ b/index.html
@@ -9,4 +9,8 @@
         <meta name="author" content="Alexander Koufos">
         <meta name="keywords" content="alexander koufos,alex koufos,alexander,alex,koufos,github" />
     </head>
+
+    <body>
+        Welcome to my GitHub page.
+    </body>
 </html>
